--- a/Project1/index.html
+++ b/Project1/index.html
@@ -15,7 +15,7 @@
         <div id="nav">
             <div id="navpt1">
                 <h3>Menu</h3>
-                <h3>Options</h3>
+                <h3>Setting</h3>
                 <i class="ri-menu-2-line"></i>
             </div>
             <div id="navpt2">
