--- a/Project1/index.html
+++ b/Project1/index.html
@@ -14,8 +14,8 @@
     <div id="main">
         <div id="nav">
             <div id="navpt1">
-                <h3>Menu-2</h3>
-                <h3>Setting 5</h3>
+                <h3>Menu</h3>
+                <h3>Setting</h3>
                 <i class="ri-menu-2-line"></i>
             </div>
             <div id="navpt2">
