Naman ne change kari hai

--- a/Project1/index.html
+++ b/Project1/index.html
@@ -16,6 +16,7 @@
             <div id="navpt1">
                 <h3>Menu</h3>
                 <h3>Setting</h3>
+                <h3>Setup</h3>
                 <i class="ri-menu-2-line"></i>
             </div>
             <div id="navpt2">
@@ -39,7 +40,5 @@
         <i class="ri-facebook-box-line"></i>
     </div>
 </div>
-
-    file is changed
 </body>
 </html>
